Улучшения синхронизации, процессов и шаблонов интерфейсов.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
 		"locale": "cpp",
 		"thread": "cpp",
 		"new": "cpp",
-		"random": "cpp"
+		"random": "cpp",
+		"chrono": "cpp",
+		"xlocale": "cpp"
 	}
 }
