--- a/bin/macosx/ertbuild.ini
+++ b/bin/macosx/ertbuild.ini
@@ -124,7 +124,7 @@
 "MacOSX-X64" {
 	Compiler {
 		Arguments {
-			AE = "--target=x86_64-apple-darwin20.1.0"
+			AE = "--target=x86_64-apple-macos11"
 		}
 	}
 	Defines {
@@ -132,7 +132,7 @@
 	}
 	Linker {
 		Arguments {
-			AF = "--target=x86_64-apple-darwin20.1.0"
+			AF = "--target=x86_64-apple-macos11"
 		}
 	}
 }
