--- a/bin/windows/ertbuild.ini
+++ b/bin/windows/ertbuild.ini
@@ -1,6 +1,7 @@
 ﻿Targets {
 	ARM64 {
 		Class = "arch"
+		Default = true
 		Name = "ARM64"
 	}
 	Console {
@@ -36,7 +37,6 @@
 	}
 	X64 {
 		Class = "arch"
-		Default = true
 		Name = "Intel x86-64"
 	}
 	X86 {
@@ -70,12 +70,12 @@ Windows {
 			AN = "/D_UNICODE"
 			AO = "/DUNICODE"
 			AP = "/std:c++17"
-			AQ = "/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22000.0\\cppwinrt"
-			AR = "/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22000.0\\shared"
-			AS = "/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22000.0\\ucrt"
-			AT = "/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22000.0\\um"
-			AU = "/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22000.0\\winrt"
-			AV = "/IC:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.36.32532\\include"
+			AQ = "/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22621.0\\cppwinrt"
+			AR = "/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22621.0\\shared"
+			AS = "/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22621.0\\ucrt"
+			AT = "/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22621.0\\um"
+			AU = "/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22621.0\\winrt"
+			AV = "/IC:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\include"
 		}
 	}
 	Defines {
@@ -110,15 +110,15 @@ Windows {
 		Windows = true
 		Compiler {
 			OutputArgument = "/fo$"
-			Path = "C:\\Program Files (x86)\\Windows Kits\\10\\bin\\10.0.22000.0\\x64\\rc.exe"
+			Path = "C:\\Program Files (x86)\\Windows Kits\\10\\bin\\10.0.22621.0\\arm64\\rc.exe"
 			Arguments {
 				BL = "/r"
-				BM = "/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22000.0\\cppwinrt"
-				BN = "/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22000.0\\shared"
-				BO = "/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22000.0\\ucrt"
-				BP = "/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22000.0\\um"
-				BQ = "/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22000.0\\winrt"
-				BR = "/IC:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.36.32532\\include"
+				BM = "/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22621.0\\cppwinrt"
+				BN = "/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22621.0\\shared"
+				BO = "/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22621.0\\ucrt"
+				BP = "/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22621.0\\um"
+				BQ = "/IC:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.22621.0\\winrt"
+				BR = "/IC:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\include"
 			}
 		}
 		IconSizes {
@@ -135,19 +135,20 @@ Windows {
 	EffectLibraryName = "ertwndfx.dll"
 	EffectLibrarySource = "ertwndfx_arm64.dll"
 	Compiler {
-		Path = "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.36.32532\\bin\\Hostx64\\arm64\\cl.exe"
+		Path = "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\bin\\Hostarm64\\arm64\\cl.exe"
 	}
 	Defines {
 		ENGINE_ARM = true
 		ENGINE_X64 = true
 	}
 	Linker {
-		Path = "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.36.32532\\bin\\Hostx64\\arm64\\link.exe"
+		Path = "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\bin\\Hostarm64\\arm64\\link.exe"
 		Arguments {
 			BS = "/MACHINE:ARM64"
-			BT = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22000.0\\ucrt\\arm64"
-			BU = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22000.0\\um\\arm64"
-			BV = "/LIBPATH:C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.36.32532\\lib\\arm64"
+			BT = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\ucrt\\arm64"
+			BU = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\ucrt_enclave\\arm64"
+			BV = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\arm64"
+			BW = "/LIBPATH:C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\lib\\arm64"
 		}
 	}
 }
@@ -166,35 +167,35 @@ Windows {
 "Windows-Console-ARM64" {
 	Linker {
 		Arguments {
-			DA = "/SUBSYSTEM:CONSOLE"
+			DB = "/SUBSYSTEM:CONSOLE"
 		}
 	}
 }
 "Windows-Console-X64" {
 	Linker {
 		Arguments {
-			DE = "/SUBSYSTEM:CONSOLE,6.00"
+			DF = "/SUBSYSTEM:CONSOLE,6.00"
 		}
 	}
 }
 "Windows-Console-X86" {
 	Linker {
 		Arguments {
-			DI = "/SUBSYSTEM:CONSOLE,5.01"
+			DJ = "/SUBSYSTEM:CONSOLE,5.01"
 		}
 	}
 }
 "Windows-Debug" {
 	Compiler {
 		Arguments {
-			CP = "/Z7"
-			CQ = "/RTC1"
-			CR = "/Od"
-			CS = "/FC"
-			CT = "/MDd"
-			CU = "/errorReport:prompt"
-			CV = "/D_DEBUG"
-			CW = "/diagnostics:column"
+			CQ = "/Z7"
+			CR = "/RTC1"
+			CS = "/Od"
+			CT = "/FC"
+			CU = "/MDd"
+			CV = "/errorReport:prompt"
+			CW = "/D_DEBUG"
+			CX = "/diagnostics:column"
 		}
 	}
 	Defines {
@@ -202,8 +203,8 @@ Windows {
 	}
 	Linker {
 		Arguments {
-			CX = "/DEBUG"
-			CY = "/ERRORREPORT:PROMPT"
+			CY = "/DEBUG"
+			CZ = "/ERRORREPORT:PROMPT"
 		}
 	}
 }
@@ -216,21 +217,21 @@ Windows {
 "Windows-GUI-ARM64" {
 	Linker {
 		Arguments {
-			DB = "/SUBSYSTEM:WINDOWS"
+			DC = "/SUBSYSTEM:WINDOWS"
 		}
 	}
 }
 "Windows-GUI-X64" {
 	Linker {
 		Arguments {
-			DF = "/SUBSYSTEM:WINDOWS,6.00"
+			DG = "/SUBSYSTEM:WINDOWS,6.00"
 		}
 	}
 }
 "Windows-GUI-X86" {
 	Linker {
 		Arguments {
-			DJ = "/SUBSYSTEM:WINDOWS,5.01"
+			DK = "/SUBSYSTEM:WINDOWS,5.01"
 		}
 	}
 }
@@ -241,7 +242,7 @@ Windows {
 	}
 	Linker {
 		Arguments {
-			CZ = "/DLL"
+			DA = "/DLL"
 		}
 	}
 	Resource {
@@ -251,41 +252,41 @@ Windows {
 "Windows-Library-ARM64" {
 	Linker {
 		Arguments {
-			DC = "/SUBSYSTEM:WINDOWS"
+			DD = "/SUBSYSTEM:WINDOWS"
 		}
 	}
 }
 "Windows-Library-X64" {
 	Linker {
 		Arguments {
-			DG = "/SUBSYSTEM:WINDOWS,6.00"
+			DH = "/SUBSYSTEM:WINDOWS,6.00"
 		}
 	}
 }
 "Windows-Library-X86" {
 	Linker {
 		Arguments {
-			DK = "/SUBSYSTEM:WINDOWS,5.01"
+			DL = "/SUBSYSTEM:WINDOWS,5.01"
 		}
 	}
 }
 "Windows-Release" {
 	Compiler {
 		Arguments {
-			CF = "/GL"
-			CG = "/Gy"
-			CH = "/O2"
-			CI = "/Oi"
-			CJ = "/MT"
-			CK = "/errorReport:none"
-			CL = "/DNDEBUG"
+			CG = "/GL"
+			CH = "/Gy"
+			CI = "/O2"
+			CJ = "/Oi"
+			CK = "/MT"
+			CL = "/errorReport:none"
+			CM = "/DNDEBUG"
 		}
 	}
 	Linker {
 		Arguments {
-			CM = "/OPT:REF"
-			CN = "/OPT:ICF"
-			CO = "/ERRORREPORT:NONE"
+			CN = "/OPT:REF"
+			CO = "/OPT:ICF"
+			CP = "/ERRORREPORT:NONE"
 		}
 	}
 }
@@ -298,21 +299,21 @@ Windows {
 "Windows-Silent-ARM64" {
 	Linker {
 		Arguments {
-			DD = "/SUBSYSTEM:WINDOWS"
+			DE = "/SUBSYSTEM:WINDOWS"
 		}
 	}
 }
 "Windows-Silent-X64" {
 	Linker {
 		Arguments {
-			DH = "/SUBSYSTEM:WINDOWS,6.00"
+			DI = "/SUBSYSTEM:WINDOWS,6.00"
 		}
 	}
 }
 "Windows-Silent-X86" {
 	Linker {
 		Arguments {
-			DL = "/SUBSYSTEM:WINDOWS,5.01"
+			DM = "/SUBSYSTEM:WINDOWS,5.01"
 		}
 	}
 }
@@ -320,19 +321,19 @@ Windows {
 	EffectLibraryName = "ertwndfx.dll"
 	EffectLibrarySource = "ertwndfx_x64.dll"
 	Compiler {
-		Path = "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.36.32532\\bin\\Hostx64\\x64\\cl.exe"
+		Path = "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\bin\\Hostarm64\\x64\\cl.exe"
 	}
 	Defines {
 		ENGINE_X64 = true
 	}
 	Linker {
-		Path = "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.36.32532\\bin\\Hostx64\\x64\\link.exe"
+		Path = "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\bin\\Hostarm64\\x64\\link.exe"
 		Arguments {
-			BW = "/MACHINE:X64"
-			BX = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22000.0\\ucrt\\x64"
-			BY = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22000.0\\ucrt_enclave\\x64"
-			BZ = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22000.0\\um\\x64"
-			CA = "/LIBPATH:C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.36.32532\\lib\\x64"
+			BX = "/MACHINE:X64"
+			BY = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\ucrt\\x64"
+			BZ = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\ucrt_enclave\\x64"
+			CA = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\x64"
+			CB = "/LIBPATH:C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\lib\\x64"
 		}
 	}
 }
@@ -346,15 +347,15 @@ Windows {
 	EffectLibraryName = "ertwndfx.dll"
 	EffectLibrarySource = "ertwndfx_x86.dll"
 	Compiler {
-		Path = "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.36.32532\\bin\\Hostx64\\x86\\cl.exe"
+		Path = "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\bin\\Hostarm64\\x86\\cl.exe"
 	}
 	Linker {
-		Path = "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.36.32532\\bin\\Hostx64\\x86\\link.exe"
+		Path = "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\bin\\Hostarm64\\x86\\link.exe"
 		Arguments {
-			CB = "/MACHINE:X86"
-			CC = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22000.0\\ucrt\\x86"
-			CD = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22000.0\\um\\x86"
-			CE = "/LIBPATH:C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.36.32532\\lib\\x86"
+			CC = "/MACHINE:X86"
+			CD = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\ucrt\\x86"
+			CE = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\x86"
+			CF = "/LIBPATH:C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\lib\\x86"
 		}
 	}
 }
@@ -362,7 +363,7 @@ Windows {
 	ObjectPath = "../../EngineRuntime/_build/windows_x86_debug"
 	Compiler {
 		Arguments {
-			DN = "/analyze-"
+			DO = "/analyze-"
 		}
 	}
 }
@@ -370,7 +371,7 @@ Windows {
 	ObjectPath = "../../EngineRuntime/_build/windows_x86_release"
 	Linker {
 		Arguments {
-			DM = "/SAFESEH"
+			DN = "/SAFESEH"
 		}
 	}
 }
