--- a/bin/windows/ertaconf.ini
+++ b/bin/windows/ertaconf.ini
@@ -1,7 +1,7 @@
-﻿Compiler = "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.36.32532\\bin\\Hostx64\\x64\\cl.exe"
+﻿Compiler = "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\bin\\Hostarm64\\arm64\\cl.exe"
 Object = "../../EngineRuntime/_build"
 Runtime = "../../EngineRuntime"
-SDK = "10.0.22000.0"
+SDK = "10.0.22621.0"
 AvailableArchitectures {
 	ARM = true
 	ARM64 = true
