--- a/bin/macosx/ertbuild.ini
+++ b/bin/macosx/ertbuild.ini
@@ -17,6 +17,7 @@
 	}
 	Defines {
 		ENGINE_MACOSX = true
+		ENGINE_RUNTIME = true
 		ENGINE_UNIX = true
 	}
 	Linker {
@@ -145,6 +146,7 @@
 Targets {
 	ARM64 {
 		Class = "arch"
+		Default = true
 		Name = "ARM64"
 	}
 	Console {
@@ -180,7 +182,6 @@ Targets {
 	}
 	X64 {
 		Class = "arch"
-		Default = true
 		Name = "Intel x86-64"
 	}
 }
