--- a/bin/windows/ertbuild.ini
+++ b/bin/windows/ertbuild.ini
@@ -1,4 +1,8 @@
 ﻿Targets {
+	ARM {
+		Class = "arch"
+		Name = "ARM"
+	}
 	ARM64 {
 		Class = "arch"
 		Default = true
@@ -131,6 +135,25 @@ Windows {
 		}
 	}
 }
+"Windows-ARM" {
+	EffectLibraryName = "ertwndfx.dll"
+	EffectLibrarySource = "ertwndfx_arm.dll"
+	Compiler {
+		Path = "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\bin\\Hostarm64\\arm\\cl.exe"
+	}
+	Defines {
+		ENGINE_ARM = true
+	}
+	Linker {
+		Path = "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\bin\\Hostarm64\\arm\\link.exe"
+		Arguments {
+			BS = "/MACHINE:ARM"
+			BT = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\ucrt\\arm"
+			BU = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\arm"
+			BV = "/LIBPATH:C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\lib\\arm"
+		}
+	}
+}
 "Windows-ARM64" {
 	EffectLibraryName = "ertwndfx.dll"
 	EffectLibrarySource = "ertwndfx_arm64.dll"
@@ -144,11 +167,11 @@ Windows {
 	Linker {
 		Path = "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\bin\\Hostarm64\\arm64\\link.exe"
 		Arguments {
-			BS = "/MACHINE:ARM64"
-			BT = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\ucrt\\arm64"
-			BU = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\ucrt_enclave\\arm64"
-			BV = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\arm64"
-			BW = "/LIBPATH:C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\lib\\arm64"
+			BW = "/MACHINE:ARM64"
+			BX = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\ucrt\\arm64"
+			BY = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\ucrt_enclave\\arm64"
+			BZ = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\arm64"
+			CA = "/LIBPATH:C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\lib\\arm64"
 		}
 	}
 }
@@ -158,44 +181,57 @@ Windows {
 "Windows-ARM64-Release" {
 	ObjectPath = "../../EngineRuntime/_build/windows_arm64_release"
 }
+"Windows-ARM-Debug" {
+	ObjectPath = "../../EngineRuntime/_build/windows_arm_debug"
+}
+"Windows-ARM-Release" {
+	ObjectPath = "../../EngineRuntime/_build/windows_arm_release"
+}
 "Windows-Console" {
 	ExecutableExtension = "exe"
 	Defines {
 		ENGINE_SUBSYSTEM_CONSOLE = true
 	}
 }
+"Windows-Console-ARM" {
+	Linker {
+		Arguments {
+			DF = "/SUBSYSTEM:CONSOLE"
+		}
+	}
+}
 "Windows-Console-ARM64" {
 	Linker {
 		Arguments {
-			DB = "/SUBSYSTEM:CONSOLE"
+			DJ = "/SUBSYSTEM:CONSOLE"
 		}
 	}
 }
 "Windows-Console-X64" {
 	Linker {
 		Arguments {
-			DF = "/SUBSYSTEM:CONSOLE,6.00"
+			DN = "/SUBSYSTEM:CONSOLE,6.00"
 		}
 	}
 }
 "Windows-Console-X86" {
 	Linker {
 		Arguments {
-			DJ = "/SUBSYSTEM:CONSOLE,5.01"
+			DR = "/SUBSYSTEM:CONSOLE,5.01"
 		}
 	}
 }
 "Windows-Debug" {
 	Compiler {
 		Arguments {
-			CQ = "/Z7"
-			CR = "/RTC1"
-			CS = "/Od"
-			CT = "/FC"
-			CU = "/MDd"
-			CV = "/errorReport:prompt"
-			CW = "/D_DEBUG"
-			CX = "/diagnostics:column"
+			CU = "/Z7"
+			CV = "/RTC1"
+			CW = "/Od"
+			CX = "/FC"
+			CY = "/MDd"
+			CZ = "/errorReport:prompt"
+			DA = "/D_DEBUG"
+			DB = "/diagnostics:column"
 		}
 	}
 	Defines {
@@ -203,8 +239,8 @@ Windows {
 	}
 	Linker {
 		Arguments {
-			CY = "/DEBUG"
-			CZ = "/ERRORREPORT:PROMPT"
+			DC = "/DEBUG"
+			DD = "/ERRORREPORT:PROMPT"
 		}
 	}
 }
@@ -214,24 +250,31 @@ Windows {
 		ENGINE_SUBSYSTEM_GUI = true
 	}
 }
+"Windows-GUI-ARM" {
+	Linker {
+		Arguments {
+			DG = "/SUBSYSTEM:WINDOWS"
+		}
+	}
+}
 "Windows-GUI-ARM64" {
 	Linker {
 		Arguments {
-			DC = "/SUBSYSTEM:WINDOWS"
+			DK = "/SUBSYSTEM:WINDOWS"
 		}
 	}
 }
 "Windows-GUI-X64" {
 	Linker {
 		Arguments {
-			DG = "/SUBSYSTEM:WINDOWS,6.00"
+			DO = "/SUBSYSTEM:WINDOWS,6.00"
 		}
 	}
 }
 "Windows-GUI-X86" {
 	Linker {
 		Arguments {
-			DK = "/SUBSYSTEM:WINDOWS,5.01"
+			DS = "/SUBSYSTEM:WINDOWS,5.01"
 		}
 	}
 }
@@ -242,51 +285,58 @@ Windows {
 	}
 	Linker {
 		Arguments {
-			DA = "/DLL"
+			DE = "/DLL"
 		}
 	}
 	Resource {
 		Library = true
 	}
 }
+"Windows-Library-ARM" {
+	Linker {
+		Arguments {
+			DH = "/SUBSYSTEM:WINDOWS"
+		}
+	}
+}
 "Windows-Library-ARM64" {
 	Linker {
 		Arguments {
-			DD = "/SUBSYSTEM:WINDOWS"
+			DL = "/SUBSYSTEM:WINDOWS"
 		}
 	}
 }
 "Windows-Library-X64" {
 	Linker {
 		Arguments {
-			DH = "/SUBSYSTEM:WINDOWS,6.00"
+			DP = "/SUBSYSTEM:WINDOWS,6.00"
 		}
 	}
 }
 "Windows-Library-X86" {
 	Linker {
 		Arguments {
-			DL = "/SUBSYSTEM:WINDOWS,5.01"
+			DT = "/SUBSYSTEM:WINDOWS,5.01"
 		}
 	}
 }
 "Windows-Release" {
 	Compiler {
 		Arguments {
-			CG = "/GL"
-			CH = "/Gy"
-			CI = "/O2"
-			CJ = "/Oi"
-			CK = "/MT"
-			CL = "/errorReport:none"
-			CM = "/DNDEBUG"
+			CK = "/GL"
+			CL = "/Gy"
+			CM = "/O2"
+			CN = "/Oi"
+			CO = "/MT"
+			CP = "/errorReport:none"
+			CQ = "/DNDEBUG"
 		}
 	}
 	Linker {
 		Arguments {
-			CN = "/OPT:REF"
-			CO = "/OPT:ICF"
-			CP = "/ERRORREPORT:NONE"
+			CR = "/OPT:REF"
+			CS = "/OPT:ICF"
+			CT = "/ERRORREPORT:NONE"
 		}
 	}
 }
@@ -296,24 +346,31 @@ Windows {
 		ENGINE_SUBSYSTEM_SILENT = true
 	}
 }
+"Windows-Silent-ARM" {
+	Linker {
+		Arguments {
+			DI = "/SUBSYSTEM:WINDOWS"
+		}
+	}
+}
 "Windows-Silent-ARM64" {
 	Linker {
 		Arguments {
-			DE = "/SUBSYSTEM:WINDOWS"
+			DM = "/SUBSYSTEM:WINDOWS"
 		}
 	}
 }
 "Windows-Silent-X64" {
 	Linker {
 		Arguments {
-			DI = "/SUBSYSTEM:WINDOWS,6.00"
+			DQ = "/SUBSYSTEM:WINDOWS,6.00"
 		}
 	}
 }
 "Windows-Silent-X86" {
 	Linker {
 		Arguments {
-			DM = "/SUBSYSTEM:WINDOWS,5.01"
+			DU = "/SUBSYSTEM:WINDOWS,5.01"
 		}
 	}
 }
@@ -329,11 +386,11 @@ Windows {
 	Linker {
 		Path = "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\bin\\Hostarm64\\x64\\link.exe"
 		Arguments {
-			BX = "/MACHINE:X64"
-			BY = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\ucrt\\x64"
-			BZ = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\ucrt_enclave\\x64"
-			CA = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\x64"
-			CB = "/LIBPATH:C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\lib\\x64"
+			CB = "/MACHINE:X64"
+			CC = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\ucrt\\x64"
+			CD = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\ucrt_enclave\\x64"
+			CE = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\x64"
+			CF = "/LIBPATH:C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\lib\\x64"
 		}
 	}
 }
@@ -352,10 +409,10 @@ Windows {
 	Linker {
 		Path = "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\bin\\Hostarm64\\x86\\link.exe"
 		Arguments {
-			CC = "/MACHINE:X86"
-			CD = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\ucrt\\x86"
-			CE = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\x86"
-			CF = "/LIBPATH:C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\lib\\x86"
+			CG = "/MACHINE:X86"
+			CH = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\ucrt\\x86"
+			CI = "/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.22621.0\\um\\x86"
+			CJ = "/LIBPATH:C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.42.34433\\lib\\x86"
 		}
 	}
 }
@@ -363,7 +420,7 @@ Windows {
 	ObjectPath = "../../EngineRuntime/_build/windows_x86_debug"
 	Compiler {
 		Arguments {
-			DO = "/analyze-"
+			DW = "/analyze-"
 		}
 	}
 }
@@ -371,7 +428,7 @@ Windows {
 	ObjectPath = "../../EngineRuntime/_build/windows_x86_release"
 	Linker {
 		Arguments {
-			DN = "/SAFESEH"
+			DV = "/SAFESEH"
 		}
 	}
 }
